Revert "Stage 3 Design Overhaul"
This reverts commit df6a417bb0002146fd7de5336affc22ee15ca6cb.

--- a/static/styles.css
+++ b/static/styles.css
@@ -56,7 +56,9 @@ table {
     width: calc(100% - 60px);
     margin-bottom: 30px;
 }
-
+#channels {
+    margin-bottom: 98px;
+}
 tr {
     height: 38px;
     line-height: 28px;
@@ -85,7 +87,7 @@ th {
 .button {
     width: 40px;
 }
-.desc, .genre {
+.desc {
     font-size: .8em;
 }
 
@@ -142,23 +144,6 @@ th {
 .currentinfo #time {
     display: inline-block;
     font-size: 12px;
-    cursor: pointer;
-}
+    width: 40px;
 
-
-/* Info */
-.info {
-    position: fixed;
-    top: 30px;
-    right: 28px;
-    width: 250px;
-    background-color: #FFF;
-    border: 2px solid #008fd5;
-    z-index: 999;
-    font-size: .8em;
-    padding: 10px;
-    display: none;
-}
-#infobutton {
-    cursor: pointer;
 }
