Design Overhaul - Finished?

--- a/static/styles.css
+++ b/static/styles.css
@@ -56,11 +56,9 @@ table {
     width: calc(100% - 60px);
     margin-bottom: 30px;
 }
-#channels {
-    margin-bottom: 98px;
-}
+
 tr {
-    height: 28px;
+    height: 38px;
     line-height: 28px;
 }
 td {
@@ -83,6 +81,12 @@ th {
     font-size: 1.2em;
     color: #2099c8;
 
+}
+.button {
+    width: 40px;
+}
+.desc, .genre {
+    font-size: .8em;
 }
 
 
@@ -138,6 +142,23 @@ th {
 .currentinfo #time {
     display: inline-block;
     font-size: 12px;
-    width: 40px;
+    cursor: pointer;
+}
 
+
+/* Info */
+.info {
+    position: fixed;
+    top: 30px;
+    right: 28px;
+    width: 250px;
+    background-color: #FFF;
+    border: 2px solid #008fd5;
+    z-index: 999;
+    font-size: .8em;
+    padding: 10px;
+    display: none;
+}
+#infobutton {
+    cursor: pointer;
 }
