--- a/static/styles.css
+++ b/static/styles.css
@@ -92,12 +92,13 @@ th {
 
 /* Controls */
 .controls {
+    overflow: hidden;
     height: 90px;
-    width: 100%;
+    width: calc(100% + 24px);
     position: fixed;
     bottom: -90px;
     left: 0;
-    background: rgba(103,175,222,.94);
+    background: #000;
     color: #FFF;
     transition: bottom 1s;
     -webkit-transition: bottom 1s;
@@ -105,17 +106,26 @@ th {
     -webkit-transition-timing-function: ease-out;
 }
 .playpause {
+    width: 60px;
+    height: 60px;
     float: left;
-    margin-left: 30px;
+    margin-left: 21px;
     text-align: center;
-    padding-top: 28px;
+    margin-top: 19px;
+    position: relative;
+}
+.playpause img {
+    margin-top: 15px;
+    height: 30px;
+    width: 30px;
 }
 .volume {
     float: right;
     margin-right: 30px;
     text-align: center;
-    padding-top: 28px;
     width: 90px;
+    padding-top: 28px;
+    position: relative;
 }
 .volume input {
     width: 60px;
@@ -138,11 +148,20 @@ th {
     font-size: 18px;
     margin: auto;
     margin-top: 4px;
+    display: inline;
 }
 .currentinfo #time {
     display: inline-block;
     font-size: 12px;
     cursor: pointer;
+}
+.currentinfo img {
+    margin-left: 8px;
+    margin-top: 4px;
+    margin-bottom: -2px;
+}
+#buylink {
+    display: none;
 }
 
 
@@ -161,4 +180,21 @@ th {
 }
 #infobutton {
     cursor: pointer;
+}
+
+
+/* Dumb Album art stuff */
+.art {
+    overflow: hidden;
+    position: absolute;
+    background-image: url('http://a4.mzstatic.com/us/r30/Music/v4/04/15/78/04157815-169d-9f91-d596-342dee2f4c46/UMG_cvrart_00602537150120_01_RGB72_1200x1200_12UMGIM46901.1200x1200-75.jpg');
+    width: 100%;
+    height: 90px;
+    background-position: 0 -600px;
+    background-size: 100%;
+    -webkit-filter: blur(30px);
+    z-index: -1;
+    clip: rect(600px,calc(100% + 12px),690px,12px);
+    margin-left: -12px;
+
 }
