--- a/templates/list.html
+++ b/templates/list.html
@@ -72,6 +72,8 @@
         </table>
     </section>
     <section class="controls">
+        <div class="art" alt="albumart">
+        </div>
         <div class="playpause">
         <img src="/static/img/pause.svg" alt="pausecontrol"/>
         </div>
@@ -82,7 +84,8 @@
         </div>
         <div class="currentinfo">
             <h3>Alt Nation</h3>
-            <h4>Tame Impala - Elephant</h4>
+            <h4>Tame Impala - Elephant</h4><a id="buylink" href="#"><img src="/static/img/cart.svg" alt="buy"/></a>
+            <br />
             <span id="time">Live</span>
         <br /><input type="range" id="player-rewind" min="1" max="300" value="300">
         </div>
