--- a/templates/list.html
+++ b/templates/list.html
@@ -84,7 +84,7 @@
         </div>
         <div class="currentinfo">
             <h3>Alt Nation</h3>
-            <h4>Tame Impala - Elephant</h4><a id="buylink" href="#"><img src="/static/img/cart.svg" alt="buy"/></a>
+            <h4>Tame Impala - Elephant</h4><a id="buylink" href="#" target="_blank"><img src="/static/img/cart.svg" alt="buy"/></a>
             <br />
             <span id="time">Live</span>
         <br /><input type="range" id="player-rewind" min="1" max="300" value="300">
