Less Shine, More performance
Now runs approximately 20% more on tylor mansur's computer.

--- a/templates/list.html
+++ b/templates/list.html
@@ -96,8 +96,7 @@
       <p>
         Welcome to SeriousCast, SiriusXM Internet Radio for normal clients.<br /><br />
         Streaming requires the VLC plugin for your web browser. <span id="player-loaded"></span><br /><br />
-        Playlist downloads require a SHOUTcast compatible streamer: VLC works well on desktop, XiiaLive works on Android after changing the stream engine to FFmpeg.<br /><br />
-        Project available on <a href="https://github.com/schlarpc/SeriousCast">github.</a>
+        Playlist downloads require a SHOUTcast compatible streamer: VLC works well on desktop, XiiaLive works on Android after changing the stream engine to FFmpeg.
       </p>
     </div>
     <embed type="application/x-vlc-plugin" pluginspage="http://www.videolan.org" id="vlc" height="0" width="0" style="display: inline; margin: 0; padding: 0;" />
