--- a/templates/list.html
+++ b/templates/list.html
@@ -17,9 +17,8 @@
         </nav>
     </header>
     <section class="main">
-      <!-- Future Features
-        <h2>Favorite Channels</h2>
-        <table>
+        <h2 id="favhead">Favorite Channels</h2>
+        <table id="favchannels">
             <thead>
                 <tr>
                     <th>#</th>
@@ -30,20 +29,22 @@
                 </tr>
             </thead>
             <tbody>
-                
-                <tr>
-                    <td class="channel">2</td>
-                    <td>
-                        <img src="/static/img/plays.svg" />
-                        <img src="/static/img/download.svg" />
+                {% for channel in channels %}
+                <tr class="favsingle" data-channel="{{ channel.siriusChannelNo }}">
+                    <td class="channel">{{ channel.siriusChannelNo }}</td>
+                    <td class="button">
+                        <a class="player-stream" href="#" id="{{ channel.siriusChannelNo }}" title="Stream"><img src="/static/img/plays.svg" alt="play" /></a>
+                        <a class="channel-remove" href="#" data-channel="{{ channel.siriusChannelNo }}" title="Add to Favorites"><img src="/static/img/minus.svg" alt="plus" /></a>
+                        <a href="/playlist/{{ channel.siriusChannelNo }}" title="Download"><img src="/static/img/arrow-down.svg" alt="download" /></a>
+
                     </td>
-                    <td class="name"><img src="http://www.siriusxm.com/cmds/displayLogo?channelKey=siriushits1&clientId=UMP&imageType=6" /></td>
-                    <td class="genre">Pop</td>
-                    <td class="desc">From pop to hip-hop and rock to R&B; SiriusXM Hits 1 is the Sound of Now!</td>
+                    <td class="name"><img src="http://www.siriusxm.com/cmds/displayLogo?channelKey={{ channel.contentId }}&clientId=UMP&imageType=6" /></td>
+                    <td class="genre">{{ channel.genre }}</td>
+                    <td class="desc">{{ channel.description }}</td>
                 </tr>
+                {% endfor %}
             </tbody>
         </table>
-      -->
         <h2>Channels</h2>
         <table id="channels">
             <thead>
@@ -57,11 +58,13 @@
             </thead>
             <tbody>
                 {% for channel in channels %}
-                <tr>
+                <tr data-channel="{{ channel.siriusChannelNo }}">
                     <td class="channel">{{ channel.siriusChannelNo }}</td>
                     <td class="button">
                         <a class="player-stream" href="#" data-channel="{{ channel.siriusChannelNo }}" title="Stream"><img src="/static/img/plays.svg" alt="play" /></a>
-                        <a href="/playlist/{{ channel.siriusChannelNo }}" title="Download"><img src="/static/img/download.svg" alt="download" /></a>
+                        <a class="channel-add" href="#" data-channel="{{ channel.siriusChannelNo }}" title="Add to Favorites"><img src="/static/img/plus.svg" alt="plus" /></a>
+                        <a href="/playlist/{{ channel.siriusChannelNo }}" title="Download"><img src="/static/img/arrow-down.svg" alt="download" /></a>
+
                     </td>
                     <td class="name">{{ channel.name }}</td>
                     <td class="genre">{{ channel.genre }}</td>
@@ -83,8 +86,8 @@
             <input type="range" id="player-volume" min="1" max="100" value="100">
         </div>
         <div class="currentinfo">
-            <h3>Alt Nation</h3>
-            <h4>Tame Impala - Elephant</h4><a id="buylink" href="#" target="_blank"><img src="/static/img/cart.svg" alt="buy"/></a>
+            <h3></h3>
+            <h4></h4><a id="buylink" href="#" target="_blank"><img src="/static/img/cart.svg" alt="buy"/></a>
             <br />
             <span id="time">Live</span>
         <br /><input type="range" id="player-rewind" min="1" max="300" value="300">
@@ -101,6 +104,7 @@
     </div>
     <embed type="application/x-vlc-plugin" pluginspage="http://www.videolan.org" id="vlc" height="0" width="0" style="display: inline; margin: 0; padding: 0;" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+    <script src="/static/jquery.cookie.js"></script>
     <script src="/static/player.js"></script>
  </body>
 </html>
