--- a/templates/list.html
+++ b/templates/list.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>SeriousCast</title>
   <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,700' type='text/css'>
+  <link rel='shortcut icon' href='/favicon.ico' type='text/css'>
   <link rel="stylesheet" href="/static/reset.css" type="text/css">
   <link rel="stylesheet" href="/static/styles.css" type="text/css">
  </head>
